--- a/angular_ui_app/src/app/components/drive/drive.component.html
+++ b/angular_ui_app/src/app/components/drive/drive.component.html
@@ -1,5 +1,5 @@
 <app-generic height="235px" width="640px">
-    Gamepad <button (click)="enableGamepad()">On</button> <button (click)="disableGamepad()">Off</button>
+    Controller <button (click)="enableGamepad()">On</button> <button (click)="disableGamepad()">Off</button>
     <div class="drive">
         <div id="driveInfo">
             <hr/>
