--- a/angular_ui_app/src/app/components/generic/generic.component.html
+++ b/angular_ui_app/src/app/components/generic/generic.component.html
@@ -1,3 +1,3 @@
-<div style="border: 1px solid black; background-color: #2A3F47;" [ngStyle]="{ height: height, width: width}">
+<div style="border: 1px solid black; background-color: #2A3F47; margin-bottom: 5px;" [ngStyle]="{ height: height, width: width}">
     <ng-content></ng-content>
 </div>
