--- a/angular_ui_app/src/app/pages/science-page/science-page.component.html
+++ b/angular_ui_app/src/app/pages/science-page/science-page.component.html
@@ -1,52 +1,70 @@
 <app-generic>
-    <p>science-page works! inject {{inject}} </p>
     <!-- <app-line-graph topicName="/test_topic" title="aTitle" 
     y_axis="yyyy"
     x_axis="xxx"/> -->
-    <h1>Data {{inject}}</h1>
+    <h1>Data </h1>
     <div style="display:flex; justify-content: flex-start;">
         <div>
-            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
-                cuvetteId="1" [inject]="inject"/>
+            <app-graph topicName="/test_topic" title="Geiger1" y_axis="The y axis" x_axis="The x axis" type="histogram"
+                 [data]="d[0]" />
 
-            <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
-                cuvetteId="1" [inject]="inject"/> -->
+            <app-graph topicName="/test_topic" title="[ph1]" y_axis="yyyy" x_axis="xxx" type="line"
+                 [data]="d[8]"/>
+
+            <app-graph 
+            title="Hmoisture1" 
+            y_axis="yyyy"
+            x_axis="xxx" 
+            type="line"
+            [data]="d[4]"
+            />
+
         </div>
         <div>
-            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
-                cuvetteId="2" [inject]="inject"/>
+            <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="2" [data]="inject" /> -->
 
             <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
                 cuvetteId="2" [inject]="inject"/> -->
         </div>
         <div>
-            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
-                cuvetteId="3" [inject]="inject"/>
+            <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="3" [data]="inject" /> -->
 
             <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
                 cuvetteId="3" [inject]="inject"/> -->
         </div>
         <div>
-            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
-                cuvetteId="4" [inject]="inject"/>
+            <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="4" [data]="inject" /> -->
 
             <!-- <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
                 cuvetteId="4" [inject]="inject"/> -->
         </div>
     </div>
 
-    <div style="display: flex; justify-content: space-around;">
-
-        <div style="text-align: center;">
+    <div style="display: flex; justify-content: space-evenly;">
+        <div style="text-align: center; border: solid 1px salmon;">
             <h1>Control</h1>
-            <div style="display: flex; justify-content: space-evenly;">
-                <div>
+            <div style="display: flex; justify-content: space-between;">
+                <div style="border: solid 1px salmon;"> 
                     <h2>Carousel</h2>
-                    Current rotation:{{data}} <button>Turn</button>
+                    <h3>
+                        Rotation:{{orientationCounter}} 
+                    </h3>
+                    <button (click)="turn()">Turn</button>
                 </div>
-                <div style="text-align: center;">
+                <div style="text-align: center; border: solid 1px salmon;">
                     <h2>Auger</h2>
                     <div style="display: flex; align-items: center; flex-direction: column;">
+                        <div>
+                            <!-- down + turn+, turn+, up+turn,  turn-, + caroussel -->
+                            <button (click)="sendAugerInstruction([-1, 1])">Drill down</button>
+                            <button (click)="sendAugerInstruction([0, 1])">Drill</button>
+                            <button (click)="sendAugerInstruction([1, 1])">Drill Up</button>
+                            <button (click)="sendAugerInstruction([0, -1])">Reverse drill</button>
+                            <button (click)="sendAugerInstruction([0, 0])">Stop drill</button>
+                        </div>
                         <div>
                             <button>Up</button>
                         </div>
@@ -61,8 +79,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
+
         <div>
             <h1>Stored data: {{data}}</h1>
             <button (click)="collect()">
