--- a/angular_ui_app/src/app/components/gps/gps.component.html
+++ b/angular_ui_app/src/app/components/gps/gps.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" />
+<link rel="stylesheet" href="/assets/leaflet.css" />
 
 <app-generic height="375px" width="375px">
   <div class="gps">
