--- a/angular_ui_app/src/app/components/header/header.component.html
+++ b/angular_ui_app/src/app/components/header/header.component.html
@@ -2,6 +2,7 @@
     <div #rosBridgeMainDiv>
         {{ rosBridgeStatus }}
     </div>
+    <app-antenna-feed/>
     <app-navbar></app-navbar>
 </div>
 
