--- a/angular_ui_app/src/app/components/arm/arm.component.html
+++ b/angular_ui_app/src/app/components/arm/arm.component.html
@@ -8,7 +8,8 @@
         <div>Mode: {{last_arm_control_mode}}</div>
         <div>Sensitivity: {{formatNumber(maxVelPercentage / 0.125)}}</div>
     </div>
-    <hr />
+    <br/>
+    <!-- Delta: 10 -->
     <div class="arm">
         <!-- to solve button problem, chnaged app.comp.ts and app.module.ts -->
         <table>
