--- a/angular_ui_app/src/app/components/arm/arm.component.scss
+++ b/angular_ui_app/src/app/components/arm/arm.component.scss
@@ -9,9 +9,7 @@ button {
     display: inline-block;
     width:fit-content;
     margin: 0 3px;
-    width: 25px;
-    color-scheme: black;
-    background-color: aqua;
+    background-color: #B6CA7B;
 }
 
 .buttons {
@@ -28,7 +26,7 @@ p {
 table {
     width: 96%;
     margin: 2%;
-    padding: 3px;
+    padding: 2px;
     border: 3px solid gray;
 }
 
