--- a/angular_ui_app/src/app/components/science-sensors/science-sensors.component.html
+++ b/angular_ui_app/src/app/components/science-sensors/science-sensors.component.html
@@ -6,12 +6,12 @@
                 <app-graph title="G1" y_axis="The y axis" x_axis="Time"
                     type="histogram" [data]="d[0]" />
 
-                <app-graph topicName="/test_topic" title="[ph1]" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[8]" />
+                <!-- <app-graph topicName="/test_topic" title="[ph1]" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[8]" />
 
-                <app-graph title="M1" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[4]" />
+                <app-graph title="M1" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[4]" /> -->
 
             </div>
-            <div>
+            <!-- <div>
                 <app-graph title="G2" y_axis="The y axis" x_axis="The x axis" type="histogram" [data]="d[1]" />
 
                 <app-graph title="PH2" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[9]" />
@@ -26,13 +26,13 @@
 
                 <app-graph title="M3" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[6]" />
 
-            </div>
+            </div> -->
             <div>
-                <app-graph title="G4" y_axis="The y axis" x_axis="The x axis" type="histogram" [data]="d[3]" />
+                <!-- <app-graph title="G4" y_axis="The y axis" x_axis="The x axis" type="histogram" [data]="d[3]" /> -->
 
                 <app-graph title="PH4" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[11]" />
 
-                <app-graph title="M4" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[7]" />
+                <!-- <app-graph title="M4" y_axis="yyyy" x_axis="xxx" type="line" [data]="d[7]" /> -->
             </div>
 
         </div>
