--- a/angular_ui_app/src/app/components/gps/gps.component.scss
+++ b/angular_ui_app/src/app/components/gps/gps.component.scss
@@ -23,6 +23,7 @@
 }
 
 .modal {
+  position: fixed;
   width: 100%;
   height: 100%;
   display: flex;
@@ -33,15 +34,38 @@
   background-color: rgba(0, 0, 0, 0.39);
   z-index: 5000;
   border-radius: 5px;
+
 }
 
 .inner-modal {
+  position: relative;
   width: 900px;
-  height: 600px;
+  height: 870px;
   background-color: rgb(42, 63, 71);
   padding: 20px;
   border-radius: 5px;
   border: #B6CA7B 2px solid;
   position: absolute;
   box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+}
+
+.scrollable-list {
+  height: 200px;
+  width: 95%;
+  margin: auto;
+  border: 1px solid black;
+  overflow-y: scroll;
+}
+
+.form-section {
+  margin-bottom: 20px;
+}
+
+
+.list-section {
+  margin-bottom: 20px;
+}
+
+button {
+  margin-top: 10px;
 }
