--- a/angular_ui_app/src/app/components/arm/arm.component.html
+++ b/angular_ui_app/src/app/components/arm/arm.component.html
@@ -3,74 +3,10 @@
 <app-generic height="340px" width="500px">
     <div style="display: flex; justify-content: space-between;">
         <div>
-            Joystick <button (click)="enableGamepad()">On</button> <button (click)="disableGamepad()">Off</button>
+            Joystick
+            <button (click)="enableGamepad()">On</button>
+            <button (click)="disableGamepad()">Off</button>
         </div>
-        <div>Mode: {{last_arm_control_mode}}</div>
-        <div>Sensitivity: {{formatNumber(maxVelPercentage / 0.125)}}</div>
     </div>
-    <br/>
-    <!-- Delta: 10 -->
-    <div class="arm">
-        <!-- to solve button problem, chnaged app.comp.ts and app.module.ts -->
-        <table>
-            <tr>
-                <td>Elbow</td>
-                <td>{{formatNumber(arm_brushless_FB[0])}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button id="wrist1" (click)="increment(0)">+</button>
-                        <button id="wrist2" (click)="decrement(0)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Shoulder</td>
-                <td>{{formatNumber(arm_brushless_FB[1])}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="increment(2)">+</button>
-                        <button (click)="decrement(2)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Tumor</td>
-                <td>{{formatNumber(arm_brushless_FB[2])}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="increment(2)">+</button>
-                        <button (click)="decrement(2)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Wrist Pitch</td>
-                <td>{{formatNumber(arm_brushed_FB[2])}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="increment(2)">+</button>
-                        <button (click)="decrement(2)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Wrist Roll</td>
-                <td>{{formatNumber(arm_brushed_FB[1])}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="increment(2)">+</button>
-                        <button (click)="decrement(2)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <td>End Effector</td>
-            <td>{{formatNumber(arm_brushed_FB[0])}}</td>
-            <td style="width: 15%;">
-                <div id="buttons">
-                    <button (click)="increment(2)">+</button>
-                    <button (click)="decrement(2)">-</button>
-                </div>
-            </td>
-        </table>
-    </div>
+    <br />
 </app-generic>
