--- a/angular_ui_app/src/app/components/gps/gps.component.scss
+++ b/angular_ui_app/src/app/components/gps/gps.component.scss
@@ -8,10 +8,12 @@
   right: 10px;
   padding: 5px;
   z-index: 4000;
-  border: 1px solid rgba(0,0,0,0.2);
   border-radius: 2px;
   box-sizing: border-box;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  color: black;
+  background-color: #fff;
+  // box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  border: 2px solid rgba(0,0,0,0.2)
 }
 
 #updateMarkersBtn:active {
@@ -19,7 +21,7 @@
 }
 
 #updateMarkersBtn:hover {
-  background-color: #e6e6e6;
+  background-color: #f4f4f4;
 }
 
 .modal {
@@ -68,4 +70,8 @@
 
 button {
   margin-top: 10px;
+}
+
+span {
+  align-content: center;
 }
